--- a/app/src/main/res/navigation/me.xml
+++ b/app/src/main/res/navigation/me.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/me"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/me"
     app:startDestination="@id/meFragment">
 
     <fragment
         android:id="@+id/meFragment"
         android:name="com.example.androidkotlin.ui.me.MeFragment"
-        android:label="MeFragment" />
+        android:label="MeFragment" >
+        <action
+            android:id="@+id/action_meFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.example.androidkotlin.ui.me.DetailFragment"
+        android:label="detail_fragment"
+        tools:layout="@layout/detail_fragment" />
 </navigation>
